--- a/config/splitkb_aurora_sofle.conf
+++ b/config/splitkb_aurora_sofle.conf
@@ -6,5 +6,17 @@ CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
+CONFIG_ZMK_MOUSE=y
+
+### POWER OPTIONS
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_EXT_POWER=y
+
+### ZMK STUDIO
+# MC: 2. zmk-studio test START
+# https://github.com/zmkfirmware/zmk/blob/main/docs/docs/config/studio.md
+CONFIG_ZMK_STUDIO=y
+# MC: zmk-studio test END
+
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
