--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -15,3 +15,8 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 # By default toggling the underglow on and off also toggles external power
 # on and off. This also causes the display to turn off.
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_EXT_POWER=y
+# Disable external power when not connected to USB
+CONFIG_ZMK_EXT_POWER_USB_ONLY=y
+
